fixed grid alignment issues

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -20,7 +20,7 @@
     a {
       @apply flex h-11 w-11 items-center rounded-full border  border-border text-center leading-[2.75] transition-colors;
       &:hover {
-        @apply hover:border-primary bg-primary transition-colors;
+        @apply bg-primary transition-colors hover:border-primary;
         svg {
           @apply text-white transition-colors;
         }
@@ -139,7 +139,7 @@
 }
 
 .features-card {
-  @apply mx-[0.9rem] my-5 rounded-md border border-solid  px-[1.875rem] py-[3rem] text-center border-primary/15 duration-300 ease-[ease] hover:-translate-y-[2px] hover:border-primary/20 hover:shadow-none md:h-[400px] flex flex-col justify-start;
+  @apply flex flex-col justify-start  rounded-md border border-solid border-primary/15 px-[1.875rem] py-[2rem] text-center duration-300 ease-[ease] hover:-translate-y-[2px] hover:border-primary/20 hover:shadow-none;
 }
 .icon {
   @apply relative z-10 m-auto block h-20 w-20 overflow-hidden rounded-[0.9rem] border border-solid border-primary/10 text-h2 leading-[5rem] duration-150;
